# rustgpt

./: .gitignore  Cargo.toml  README.md  build.rs  kvbi1.py
src/: cli.rs  head.rs  interface.rs  karpathy.rs  language_model.rs  lm.rs  lr_schedule.rs  main.rs  model.rs  muon.rs  tokenizer.rs  utils.rs  vocabulary.rs
src/baseline/: block.rs  ffwd.rs  head.rs  model.rs  multihead.rs
src/karpathy/: block.rs  head.rs  model.rs  multihead.rs
src/lm/: block.rs  norm.rs  position_embedding.rs
src/lm/block/: activation.rs  attention.rs  storage.rs
src/lm/block/attention/: quadratic.rs
src/lm/position_embedding/: additive.rs  rotary.rs
